# godot-rust-template

./: Cargo.toml
gdnative-bindings-0.9.3/: Cargo.toml  build.rs
gdnative-bindings-0.9.3/src/: generated.rs  icalls.rs
rust/: Cargo.toml
rust/src/: game.rs
sh/: test-template.sh
